--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nexthulu",
+  "name": "huluhome",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^11.10.0",
-    "next": "15.4.1",
+    "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "firebase": "^12.0.0",
+    "leaflet": "^1.9.4",
+    "next": "15.4.3",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
+    "react-toastify": "^11.0.5",
+    "resend": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.4.1",
+    "eslint-config-next": "15.4.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
